--- a/Officedepotlenovo/FijoCompleto1.html
+++ b/Officedepotlenovo/FijoCompleto1.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/H9vOTJv.png");
+            background: url("https://i.imgur.com/jhp4QXV.jpg");
             background-size: cover;
         }
 
