--- a/Officedepotlenovo/index.html
+++ b/Officedepotlenovo/index.html
@@ -278,7 +278,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i8.i9.shape.html:shape/html-->
 <div id="i9"></div>
 <!--#/#--><!--#i8.i56.image.html:image/html-->
-<img id="i56" src="https://i.imgur.com/wa1ci91.png"/>
+<img id="i56" src="https://i.imgur.com/rkzdktg.jpg"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i19.cube-panel.html:cube-panel/html.1-->
@@ -286,7 +286,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i19.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/CDLG8uH.jpg"/>
+<img id="i58" src="https://i.imgur.com/tWmKzvp.jpg"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -334,7 +334,7 @@ var el = document.getElementById('i56');
 
 el.addEventListener('click', function(e){
     /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/search/?q=86651%2084705%3Arelevance%3Abrand%3ALENOVO&text=86651%2084705&utm_source=MOSAIC&utm_medium=INTEL_NATIVE&utm_campaign=INTEL_GAMING&utm_term=Paid&utm_content=OD'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/Categor%C3%ADa/Todas/C%C3%B3mputo/Laptop/Laptop/LAPTOP-LENOVO-LEGION-Y530-%28COREI5%2C-15-6-PULG-%29/p/84705'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
