--- a/Officedepotlenovo/FijoPeq2.html
+++ b/Officedepotlenovo/FijoPeq2.html
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/ikldpyb.png");
+            background: url("https://i.imgur.com/lBJtoKj.png");
             background-size: cover;
         }
 
