--- a/Officedepotlenovo/index.html
+++ b/Officedepotlenovo/index.html
@@ -278,7 +278,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i8.i9.shape.html:shape/html-->
 <div id="i9"></div>
 <!--#/#--><!--#i8.i56.image.html:image/html-->
-<img id="i56" src="https://i.imgur.com/rkzdktg.jpg"/>
+<img id="i56" src="https://i.imgur.com/in3P299.jpg"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i19.cube-panel.html:cube-panel/html.1-->
@@ -286,7 +286,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i19.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/tWmKzvp.jpg"/>
+<img id="i58" src="https://i.imgur.com/whJ8VVh.jpg"/>
 <!--#/#-->
 </div>
 <!--#/#-->
