--- a/H&M Isla Merida Post/Cube.html
+++ b/H&M Isla Merida Post/Cube.html
@@ -846,7 +846,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡Ya abrimos! Visita nuestra tienda favorita: H&M Isla Mérida</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/huIksGt.png"/>
+<img id="i130" src="https://i.imgur.com/cbrtmOn.jpg"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
