--- a/H&M Isla Merida Post/Cube.html
+++ b/H&M Isla Merida Post/Cube.html
@@ -878,7 +878,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/SjSff6U.png"/>
+<img id="i60" src="https://i.imgur.com/Dgt1uya.jpg"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¡Visítanos, tenemos ofertas de apertura!</div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
