--- a/Victorias secret/Video.html
+++ b/Victorias secret/Video.html
@@ -331,7 +331,7 @@
         </script>
         <div onclick="openUrl();">
        
-           <div class="tgx_logo"><a href="https://goo.gl/maps/iVB569UEMj22"></a><img style="height: 40px;" src="https://i.imgur.com/O5Er1RJ.png"></div>
+           <div class="tgx_logo"><a href="https://goo.gl/maps/iVB569UEMj22"></a><img style="height: 40px;" src="https://i.imgur.com/vYvlKcd.png"></div>
            
         <div class="videonew_text"> 
             <span class="videonew_text_title">
