--- a/Cadillac/index.html
+++ b/Cadillac/index.html
@@ -694,7 +694,7 @@ var el = document.getElementById('i72');
 
 el.addEventListener('click', function(e){
     /*#i82.i83.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.cadillac.com.mx/vehiculos/xt5-camioneta-de-lujo?&ppc=GOOGLE_700000001310866_71700000048019608_58700004796697609_p41066884456&gclid=EAIaIQobChMIpOP06bvu4AIVCb7ACh1SRQH8EAAYASAAEgLHcPD_BwE&gclsrc=aw.ds'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -800,7 +800,7 @@ var el = document.getElementById('i88');
 
 el.addEventListener('click', function(e){
     /*#i140.i141.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.cadillac.com.mx/vehiculos/xt5-camioneta-de-lujo?&ppc=GOOGLE_700000001310866_71700000048019608_58700004796697609_p41066884456&gclid=EAIaIQobChMIpOP06bvu4AIVCb7ACh1SRQH8EAAYASAAEgLHcPD_BwE&gclsrc=aw.ds'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -891,7 +891,7 @@ var el = document.getElementById('i96');
 
 el.addEventListener('click', function(e){
     /*#i130.i131.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.cadillac.com.mx/vehiculos/xt5-camioneta-de-lujo?&ppc=GOOGLE_700000001310866_71700000048019608_58700004796697609_p41066884456&gclid=EAIaIQobChMIpOP06bvu4AIVCb7ACh1SRQH8EAAYASAAEgLHcPD_BwE&gclsrc=aw.ds'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -921,7 +921,7 @@ var el = document.getElementById('i30');
 
 el.addEventListener('click', function(e){
     /*#i56.i57.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.cadillac.com.mx/vehiculos/xt5-camioneta-de-lujo?&ppc=GOOGLE_700000001310866_71700000048019608_58700004796697609_p41066884456&gclid=EAIaIQobChMIpOP06bvu4AIVCb7ACh1SRQH8EAAYASAAEgLHcPD_BwE&gclsrc=aw.ds'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -982,7 +982,7 @@ var el = document.getElementById('i108');
 
 el.addEventListener('click', function(e){
     /*#i116.i117.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://www.victoriassecret.mx'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://www.cadillac.com.mx/vehiculos/xt5-camioneta-de-lujo?&ppc=GOOGLE_700000001310866_71700000048019608_58700004796697609_p41066884456&gclid=EAIaIQobChMIpOP06bvu4AIVCb7ACh1SRQH8EAAYASAAEgLHcPD_BwE&gclsrc=aw.ds'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
