--- a/Kipling/hover-text-big3.html
+++ b/Kipling/hover-text-big3.html
@@ -18,12 +18,19 @@
     padding: 0;
     font-family: Source Sans Pro;
 }
+.imgBx:before{
+    content: "";
+    width: 298px;
+    height: 598px;
+    position: absolute;
+}
+
 .card {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 299px;
+    width: 298px;
     height: 598px;
     background: none;
     overflow: hidden;
@@ -103,7 +110,7 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/SQFT3Sa.gif">
+                 <iframe  src="fade-completo.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
