--- a/Cadillac/fade-completo2.html
+++ b/Cadillac/fade-completo2.html
@@ -370,6 +370,13 @@
   
   <div class="value_wrapper carousel-wrapper size_320x480">
 
+     <div id="botones-para-compartir" style="display:inline;float:left;margin-top:570px;margin-left:7px;"><span>  
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://www.cadillac.com.mx/vehiculos/xt5-camioneta-de-lujo?&ppc=GOOGLE_700000001310866_71700000048019608_58700004796697609_p41066884456&gclid=EAIaIQobChMIpOP06bvu4AIVCb7ACh1SRQH8EAAYASAAEgLHcPD_BwE&gclsrc=aw.ds"  target="block">    
+                        <img alt="compartir en facebook" class="facebooki" height="25" src="https://i.imgur.com/MiICEtL.png" title="compartir en facebook" width="100" /></a>
+
+                           
+                    </span></div>
+
     
    
     <a href="https://www.cadillac.com.mx/vehiculos/xt5-camioneta-de-lujo?&ppc=GOOGLE_700000001310866_71700000048019608_58700004796697609_p41066884456&gclid=EAIaIQobChMIpOP06bvu4AIVCb7ACh1SRQH8EAAYASAAEgLHcPD_BwE&gclsrc=aw.ds" target="_blank">
