--- a/Sportcity/Venetian.html
+++ b/Sportcity/Venetian.html
@@ -2325,7 +2325,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">Hay rutinas que te hacen escapar de tus rutinas. Tener tiempo es</div>
 <!--#/#--><!--#i109.text.html:text/html-->
-<div id="i109">Elije tu training partner y entrena  
+<div id="i109">Elige tu training partner y entrena  
 3 días gratis.</div>
 <!--#/#--><!--#i107.text.html:text/html-->
 <div id="i107">#PorTi.</div>
