--- a/Sportcity/hover-text-big.html
+++ b/Sportcity/hover-text-big.html
@@ -116,7 +116,7 @@
             <!--SEGUNDA CARA (LANDING2)--> 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/2KNYxiicAPt" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/uq5vdYy.jpg"> </a></div>
+                <a href="https://goo.gl/maps/2KNYxiicAPt" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/xf5Rl7T.jpg"> </a></div>
 
              
 
