--- a/H&M Marzo/Cube.html
+++ b/H&M Marzo/Cube.html
@@ -878,7 +878,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/LkHBHNF.jpg"/>
+<img id="i60" src="https://i.imgur.com/pIwfTDa.jpg"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¿Qué esperas? ¡Sé el primero en la fila y gánate una tarjeta por $5,000 MXN.</div>
 <!--#/#--><!--#i6.i232.image.html:image/html-->
