--- a/Kipling/hover-text-big2.html
+++ b/Kipling/hover-text-big2.html
@@ -110,7 +110,7 @@
 
             <div class="imgBx">
                 
-               <iframe  src="fade-completo2.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
+               <iframe  src="ZoomExp300x6002.html" width="300" height="600" frameborder="0" scrolling="no" align="center"></iframe>
             </div>
 
 
