--- a/Puerto de Indias/Video-Geo.html
+++ b/Puerto de Indias/Video-Geo.html
@@ -30,7 +30,7 @@
         .PapaJohnFijo a,
         .PapaJohnFijo a:hover {
             text-decoration: none;
-            color: white
+            color: black
         }
 
 
