--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -562,8 +562,8 @@ url('fonts/') format('svg');
 <img id="i60" src="https://i.imgur.com/zV2gv6q.jpg"/>
 <!--#/#--><!--#i8.i152.image.html:image/html-->
 <img id="i152" src="https://i.imgur.com/AqxeEoY.png"/>
-<!--#/#--><!--#i8.i106.image.html:image/html-->
-<img id="i106" src="https://i.imgur.com/UhmS6ks.png"/>
+<!--#/#--><!--#i8.i106.Botonsito.html:image/html-->
+<img id="i106" src="https://i.imgur.com/H7KMl4l.png"/>
 <!--#/#--><!--#i8.i102.shape.html:shape/html-->
 <div id="i102"></div>
 <!--#/#--><!--#i8.i160.image.html:image/html-->
