--- a/Puerto de Indias/FadeBig.html
+++ b/Puerto de Indias/FadeBig.html
@@ -382,7 +382,7 @@
    
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
       
-       <div class="cta"><a href="https://goo.gl/maps/HshgM3tsakq"><img style="height: 35px;" src="https://i.imgur.com/UhmS6ks.png"></a></div>
+       <div class="cta"><a href="https://goo.gl/maps/HshgM3tsakq"><img style="height: 35px;" src="https://i.imgur.com/H7KMl4l.png"></a></div>
 <a HREF=" https://www.instagram.com/ginpuertoindias/?hl=es" TARGET="_blank">
         <div class="tgx_cover bg cover-1 carousel-item item-1">
             <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
