--- a/Puerto de Indias/Venetian.html
+++ b/Puerto de Indias/Venetian.html
@@ -2331,8 +2331,8 @@ url('fonts/') format('svg');
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
 <img id="i44" src="https://i.imgur.com/q57qlU6.jpg"/>
-<!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/UhmS6ks.png"/>
+<!--#/#--><!--#i46.Botonsito.html:image/html-->
+<img id="i46" src="https://i.imgur.com/H7KMl4l.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/AqxeEoY.png"/>
 <!--#/#--><!--#i68.shape.html:shape/html-->
