--- a/Puerto de Indias/Video-Geo.html
+++ b/Puerto de Indias/Video-Geo.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="ad.size" content="width=298, height=598" />
     <link href='https://fonts.googleapis.com/css?family=Trebuchet MS:400,400i,700,700i' rel='stylesheet' type='text/css'>
-    <title>Autoniza</title>
+    <title>Puerto de indias</title>
     <style>
 
      @font-face {
@@ -20,9 +20,10 @@
     display: none; 
 }
 
-        @media(min-width: 500px){
+        @media(min-width: 600px){
             .te-container{
-            width: 300px !important; 
+            width: 300px !important;
+            background-color: #000;
         }
         }
         
@@ -30,7 +31,7 @@
         .PapaJohnFijo a,
         .PapaJohnFijo a:hover {
             text-decoration: none;
-            color: black
+            color: black;
         }
 
 
@@ -49,6 +50,8 @@
             height: 600px;
             overflow: hidden;
             font-family: Anglecia-Pro-Title-W01-Bold_1;
+            background-color: #000;
+
         }
 
         .PapaJohnFijo .bzm_text {
