--- a/Serie Matrimonio/video2.html
+++ b/Serie Matrimonio/video2.html
@@ -265,7 +265,7 @@
     </style>
     <script>
         function openUrl() {
-            window.open("https://youtu.be/jHBWIho9eXU");
+            window.open("https://mx.milifetime.tv/programas/matrimonio-primera-vista");
         }
     </script>
 </head>
@@ -336,13 +336,13 @@
          <div style="bottom:0px;height: 1px;text-align:left;margin-top:10px">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:3px;margin-top:-5px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://youtu.be/Dbutr6xHCpM"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://mx.milifetime.tv/programas/matrimonio-primera-vista"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/LxsjqUL.png" title="compartir en facebook" width="21" /></a>
 
                             <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://youtu.be/Dbutr6xHCpM" target="block">
                             <img alt="compartir en whatsapp" class="whatsappi" height="21" src="https://i.imgur.com/UZusWsu.png" title="compartir en whatsapp" width="21" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://youtu.be/Dbutr6xHCpM" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://mx.milifetime.tv/programas/matrimonio-primera-vista" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="21" src="https://i.imgur.com/pf6CM8a.png" title="compartir en twitter" width="21" /></a>
                     </span>
                 </div>
