--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -585,7 +585,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i19.i86.image.html:image/html-->
 <img id="i86" src="https://i.imgur.com/AqxeEoY.png"/>
 <!--#/#--><!--#i19.i134.image.html:image/html-->
-<img id="i134" src="https://i.imgur.com/UhmS6ks.png"/>
+<img id="i134" src="https://i.imgur.com/H7KMl4l.png"/>
 <!--#/#--><!--#i19.i122.shape.html:shape/html-->
 <div id="i122"></div>
 <!--#/#--><!--#i19.i146.image.html:image/html-->
@@ -597,13 +597,13 @@ url('fonts/') format('svg');
 <!--#/#-->
 </div>
 <!--#/#--><!--#i4.i30.cube-panel.html:cube-panel/html.1-->
-<div id="i30" class="adf-Panel ">
+<div id="i30" class="adf-Panel">
     <!--#i30.i31.shape.html:shape/html-->
 <div id="i31"></div>
 <!--#/#--><!--#i30.i68.image.html:image/html-->
 <img id="i68" src="https://i.imgur.com/jarUJtT.jpg"/>
 <!--#/#--><!--#i30.i138.image.html:image/html-->
-<img id="i138" src="https://i.imgur.com/UhmS6ks.png"/>
+<img id="i138" src="https://i.imgur.com/H7KMl4l.png"/>
 <!--#/#--><!--#i30.i98.shape.html:shape/html-->
 <div id="i98"></div>
 <!--#/#--><!--#i30.i188.image.html:image/html-->
@@ -623,7 +623,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i41.i184.image.html:image/html-->
 <img id="i184" src="https://i.imgur.com/AqxeEoY.png"/>
 <!--#/#--><!--#i41.i142.image.html:image/html-->
-<img id="i142" src="https://i.imgur.com/UhmS6ks.png"/>
+<img id="i142" src="https://i.imgur.com/H7KMl4l.png"/>
 <!--#/#--><!--#i41.i118.shape.html:shape/html-->
 <div id="i118"></div>
 <!--#/#--><!--#i41.i164.image.html:image/html-->
