--- a/Serie Matrimonio/ZoomExp300x600(2).html
+++ b/Serie Matrimonio/ZoomExp300x600(2).html
@@ -148,7 +148,7 @@ a {text-decoration: none;}
 
 </head>
 <body class="zoom" style="margin:0px;">
-  <a href="https://mx.milifetime.tv/programas/" target="_blank">
+  <a href="https://mx.milifetime.tv/programas/matrimonio-primera-vista" target="_blank">
  	 <div class="wrapper size_300x250">
     
 
