--- a/Puerto de Indias/Cube.html
+++ b/Puerto de Indias/Cube.html
@@ -518,18 +518,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i4.i91.shape.css:shape/base/css*/
-#i91 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
-/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
-#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
 /*#/#*//*#i4.i239.image.css:image/base/css*/
 #i239 { opacity: 1; }
 /*#/#*//*#i239.i240.positioning.css:positioning/base/css.2*/
@@ -538,6 +526,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(131px, 208px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(131px, 208px) rotate(0deg);
         transform: translate(0, 0) translate(131px, 208px) rotate(0deg);
+}
+/*#/#*//*#i4.i91.shape.css:shape/base/css*/
+#i91 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
+#i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
@@ -562,13 +560,25 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i5.i236.image.css:image/base/css*/
 #i236 { opacity: 1; }
+/*#/#*//*#i236.i237.positioning.css:positioning/base/css.2*/
+#i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 40px;
+        -ms-transform: translate(0, 0) translate(75px, 130px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(75px, 130px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(75px, 130px) rotate(0deg);
+        transform: translate(0, 0) translate(75px, 130px) rotate(0deg);
+}
 /*#/#*//*#i5.i247.image.css:image/base/css*/
 #i247 { opacity: 1; }
+/*#/#*//*#i247.i248.positioning.css:positioning/base/css.2*/
+#i247 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 62px;
+        -ms-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
+        transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
+}
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
-/*#/#*//*#i175.i176.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i95 { cursor: pointer; }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
 #i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -705,20 +715,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i236.i237.positioning.css:positioning/base/css.2*/
-#i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 150px; height: 40px;
-        -ms-transform: translate(0, 0) translate(75px, 130px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(75px, 130px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(75px, 130px) rotate(0deg);
-        transform: translate(0, 0) translate(75px, 130px) rotate(0deg);
-}
-/*#/#*//*#i247.i248.positioning.css:positioning/base/css.2*/
-#i247 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 62px;
-        -ms-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
-        transform: translate(0, 0) translate(129px, 68px) rotate(0deg);
-}
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
@@ -740,18 +736,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i6.i99.shape.css:shape/base/css*/
-#i99 { background-color: #dedede; opacity: 0.00;
-}
-/*#/#*//*#i179.i180.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i99 { cursor: pointer; }
-/*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
-#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-}
 /*#/#*//*#i6.i241.image.css:image/base/css*/
 #i241 { opacity: 1; }
 /*#/#*//*#i241.i242.positioning.css:positioning/base/css.2*/
@@ -760,6 +744,16 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(131px, 208px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(131px, 208px) rotate(0deg);
         transform: translate(0, 0) translate(131px, 208px) rotate(0deg);
+}
+/*#/#*//*#i6.i99.shape.css:shape/base/css*/
+#i99 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
+#i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
@@ -784,10 +778,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/xlrLaxD.png"/>
+<!--#/#--><!--#i4.i239.image.html:image/html-->
+<img id="i239" src="https://i.imgur.com/H7KMl4l.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
-<!--#/#--><!--#i4.i239.image.html:image/html-->
-<img id="i239" src="https://i.imgur.com/UhmS6ks.png"/>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i5.cube-panel.html:cube-panel/html-->
@@ -796,7 +790,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/jarUJtT.jpg"/>
-<!--#/#--><!--#i5.i236.Botonsito.html:image/html-->
+<!--#/#--><!--#i5.i236.image.html:image/html-->
 <img id="i236" src="https://i.imgur.com/H7KMl4l.png"/>
 <!--#/#--><!--#i5.i247.image.html:image/html-->
 <img id="i247" src="https://i.imgur.com/TqJQe86.png"/>
@@ -810,10 +804,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <div id="i40"></div>
 <!--#/#--><!--#i6.i234.image.html:image/html-->
 <img id="i234" src="https://i.imgur.com/e9lwurY.png"/>
+<!--#/#--><!--#i6.i241.image.html:image/html-->
+<img id="i241" src="https://i.imgur.com/H7KMl4l.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
-<!--#/#--><!--#i6.i241.image.html:image/html-->
-<img id="i241" src="https://i.imgur.com/UhmS6ks.png"/>
 <!--#/#-->
 </div>
 <!--#/#-->
@@ -855,13 +849,6 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
-/*#/#*//*#i91.i177.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i91').addEventListener('click', function(e){
-    /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.instagram.com/ginpuertoindias/?hl=es'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 /*#/#*//*#i4.i239.image.js:image/base/js*/
 
 /*#/#*//*#i239.i240.positioning.js:positioning/base/js.2*/
@@ -872,7 +859,20 @@ var el = document.getElementById('i239');
 
 el.addEventListener('click', function(e){
     /*#i245.i246.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i91.i249.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i91');
+
+el.addEventListener('click', function(e){
+    /*#i249.i250.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.instagram.com/ginpuertoindias/?hl=es'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -894,13 +894,19 @@ bmShow('i236');
 
 /*#/#*//*#i247.i248.positioning.js:positioning/base/js.2*/
 bmShow('i247');
-/*#/#*//*#i95.i175.actions.js:actions/base/js*/
+/*#/#*//*#i95.i251.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-document.getElementById('i95').addEventListener('click', function(e){
-    /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
+var el = document.getElementById('i95');
+
+el.addEventListener('click', function(e){
+    /*#i251.i252.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -908,13 +914,6 @@ document.getElementById('i95').addEventListener('click', function(e){
    
 /*#/#*//*#i6.i234.image.js:image/base/js*/
 
-/*#/#*//*#i99.i179.actions.js:actions/base/js*/
-/* Name: On Click; */
-document.getElementById('i99').addEventListener('click', function(e){
-    /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.instagram.com/ginpuertoindias/?hl=es'), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
 /*#/#*//*#i6.i241.image.js:image/base/js*/
 
 /*#/#*//*#i241.i242.positioning.js:positioning/base/js.2*/
@@ -925,7 +924,20 @@ var el = document.getElementById('i241');
 
 el.addEventListener('click', function(e){
     /*#i243.i244.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
+/*#/#*//*#i99.i253.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i99');
+
+el.addEventListener('click', function(e){
+    /*#i253.i254.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.instagram.com/ginpuertoindias/?hl=es'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -973,15 +985,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i239.image.meta:image/meta*/
+name: H7KMl4l.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i239.i240.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i239.image.meta:image/meta*/
-name: UhmS6ks.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i239.i240.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i5.cube-panel.meta:cube-panel/meta*/
     name: Cube Panel 2;
 /*#/#*//*#i5.i30.shape.meta:shape/meta*/
@@ -994,7 +1006,7 @@ customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i236.image.meta:image/meta*/
-name: UhmS6ks.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: H7KMl4l.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i236.i237.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
@@ -1018,15 +1030,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i234.i235.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i6.i241.image.meta:image/meta*/
+name: H7KMl4l.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i241.i242.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i241.image.meta:image/meta*/
-name: UhmS6ks.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i241.i242.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*/--><!--#/#-->
