--- a/Puerto de Indias/FadeBig.html
+++ b/Puerto de Indias/FadeBig.html
@@ -17,7 +17,7 @@
        url(Anglecia-Pro-Title-W01-Bold_1.woff) format('woff');
 }
         body.tgx {
-            background-color: #FFFFFF;
+            background-color: #000;
             color: black;
             font-family: 'Anglecia-Pro-Title-W01-Bold_1';
             margin: 0;
@@ -35,26 +35,31 @@
             overflow: hidden;
             border: 1px solid #c5c5c5;
             cursor: pointer;
+            background-color: #000;
         }
 
         .tgx_wrapper.size_300x250 {
             width: 298px;
             height: 248px;
+            background-color: #000;
         }
 
         .tgx_wrapper.size_320x480 {
             width: 298px;
             height: 598px;
+            background-color: #000;
         }
 
         .tgx_wrapper.size_320x50 {
             width: 318px;
             height: 48px;
+            background-color: #000;
         }
 
         .tgx_wrapper.size_728x90 {
             width: 726px;
             height: 88px;
+            background-color: #000;
         }
 
         .tgx_cover {
@@ -147,7 +152,7 @@
         }
 
         .tgx_text_title {
-            font-size: 145%;
+            font-size: 130%;
             color: black;
             display: inline-block;
             width: 98%;
@@ -363,9 +368,9 @@
          .logo {
             width: 41%;
             z-index: 2;
-            float: right;
+            float: left;
             height: 30px;
-            text-align: right;
+            text-align: left;
             margin-top: -7px;
             margin-right: 5px
         }
@@ -398,7 +403,7 @@
             <div class="tgx_logo"><span class="tgx_text_bold tgx_text_small"></span></div>
         </div>
         <div class="tgx_text"> 
-            <span class="tgx_text_title tgx_text_bold">
+            <span class="tgx_text_title tgx_text_bold" style="color: #FFFFFF;">
              Ask for  <span style="color: #eb9baf;">“a Pink Puerto and tonic, por favor”</span>
             </span>
             <br/>  
@@ -408,20 +413,20 @@
                 
 
 <div style="bottom:0px;height: 1px;text-align:left;margin-top:12px">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-left:4px;margin-top:0px;">
+                <div id="botones-para-compartir" style="display:inline;float:right;margin-left:4px;margin-top:0px;">
                     <span>  
                         <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/HshgM3tsakq"  target="block">    
-                        <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="21" /></a>
+                        <img alt="compartir en facebook" class="facebooki" height="21" src="https://i.imgur.com/5OD7vRH.png" title="compartir en facebook" width="21" /></a>
 
                             <a class="shared" href="whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq" target="block">
-                            <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/ObtrzfY.png" title="compartir en google+" width="21" /></a>
+                            <img alt="compartir en google+" class="googlei" height="21" src="https://i.imgur.com/yhR0ZY2.png" title="compartir en google+" width="21" /></a>
 
                             <a class="shared" href="https://twitter.com/home?status=https://goo.gl/maps/HshgM3tsakq" target="block">
-                            <img alt="compartir en twitter" class="twitteri" height="21" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="21" /></a>
+                            <img alt="compartir en twitter" class="twitteri" height="21" src="https://i.imgur.com/KVGlpSv.png" title="compartir en twitter" width="21" /></a>
                     </span>
                 </div>
                 <div class="logo">
-                    <img src="https://i.imgur.com/AqxeEoY.png" style="height:40px">
+                    <img src="https://i.imgur.com/y06OszM.png" style="height:40px">
                 </div>
                 
         </div>
