--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -580,7 +580,7 @@ url('fonts/') format('svg');
     <!--#i19.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i19.i62.image.html:image/html-->
-<img id="i62" src="https://i.imgur.com/yjeZpJR.jpg"/>
+<img id="i62" src="https://i.imgur.com/2sivezF.jpg"/>
 <!--#/#--><!--#i19.i78.text.html:text/html-->
 <div id="i78">Where could you share Puerto de Indias with someone?</div>
 <!--#/#--><!--#i19.i86.image.html:image/html-->
