--- a/Puerto de Indias/FadeBig.html
+++ b/Puerto de Indias/FadeBig.html
@@ -74,7 +74,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/8VWs9qA.jpg");
+            background: url("https://i.imgur.com/YEGXQPC.jpg");
             background-size: cover;
             
         }
