--- a/Puerto de Indias/FadeBig2.html
+++ b/Puerto de Indias/FadeBig2.html
@@ -70,7 +70,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/8VWs9qA.jpg");
+            background: url("https://i.imgur.com/LXZ2zl8.jpg");
             background-size: cover;
             
         }
