--- a/Puerto de Indias/Video-Geo.html
+++ b/Puerto de Indias/Video-Geo.html
@@ -146,16 +146,7 @@
             -webkit-animation: example3Back 0.4s ease-out forwards;
         }
 
-        @-webkit-keyframes example3Back {
-            0% {
-                -webkit-transform: rotate(40deg) scale(1.5) translate(200px, 10px);
-                opacity: 0;
-            }
-            100% {
-                -webkit-transform: rotate(0deg) scale(1) translate(0, 0);
-                opacity: 1;
-            }
-        }
+      
 
         .PapaJohnFijo #botones-para-compartir {
             position:relative;
@@ -200,14 +191,14 @@
         }
 
         
-         @media only screen and (min-device-width: 560px) and (orientation: portrait) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
+          /* @media only screen and (min-device-width: 560px) and (orientation: portrait) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
     /* iPhone 5 only */
 }
 
  @media screen and (max-width: 500px) {
         .PapaJohnFijo .te-container {
             width: 100%;
-            height: 560px;
+            height: 600px;
             background-color: #FFF;
             overflow-y: auto;
         }
