--- a/Puerto de Indias/Cube2.html
+++ b/Puerto de Indias/Cube2.html
@@ -324,7 +324,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i19.i78.text.css:text/base/css*/
-#i78 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 16px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i78 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 18px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i78.i79.positioning.css:positioning/base/css.2*/
 #i78 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 259px; height: 55px;
         -ms-transform: translate(0, 0) translate(21px, 182px) rotate(0deg);
@@ -454,13 +454,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i41.i80.text.css:text/base/css*/
-#i80 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 17px; color: #ffffff; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i80 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Anglecia-Pro-Title-W01-Bold_1"; font-size: 18px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i80.i81.positioning.css:positioning/base/css.2*/
 #i80 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 251px; height: 55px;
-        -ms-transform: translate(0, 0) translate(26px, 182px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(26px, 182px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(26px, 182px) rotate(0deg);
-        transform: translate(0, 0) translate(26px, 182px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(26px, 179px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(26px, 179px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(26px, 179px) rotate(0deg);
+        transform: translate(0, 0) translate(26px, 179px) rotate(0deg);
 }
 /*#/#*//*#i41.i94.image.css:image/base/css*/
 #i94 { opacity: 1; }
@@ -738,7 +738,7 @@ var el = document.getElementById('i172');
 
 el.addEventListener('click', function(e){
     /*#i212.i213.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -791,7 +791,11 @@ bmShow('i134');
 /* Name: On Click; */
 var el = document.getElementById('i134');
 
-
+el.addEventListener('click', function(e){
+    /*#i136.i137.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -838,7 +842,7 @@ var el = document.getElementById('i148');
 
 el.addEventListener('click', function(e){
     /*#i224.i225.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -898,7 +902,11 @@ bmShow('i138');
 /* Name: On Click; */
 var el = document.getElementById('i138');
 
-
+el.addEventListener('click', function(e){
+    /*#i140.i141.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -959,7 +967,11 @@ bmShow('i142');
 /* Name: On Click; */
 var el = document.getElementById('i142');
 
-
+el.addEventListener('click', function(e){
+    /*#i144.i145.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
@@ -1006,7 +1018,7 @@ var el = document.getElementById('i168');
 
 el.addEventListener('click', function(e){
     /*#i220.i221.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://goo.gl/maps/HshgM3tsakq'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
